# Course_work

./: CMakeLists.txt  Doxyfile
res/: .env
src/: Converter.cpp  Converter.h  main.cpp
